# skill-pdf

./: .gitignore  LICENSE  README.md  README.zh-CN.md  install.sh  pdf-read  pdf-write  pyproject.toml  skill.json  skill.md
src/: pdf_tool.py
tests/: conftest.py  test_pdf_tool.py  test_protocol.py
