[project]
name = "skill-pdf"
version = "1.0.0"
description = "PDF reading (PyMuPDF4LLM) and generation (WeasyPrint) skill for BoltLynx agents"
requires-python = ">=3.12"
dependencies = [
    "pymupdf4llm>=0.0.17",
    "weasyprint>=62.0",
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
    "pygments>=2.17",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
